Implement delete admin end-point
