# public/api.yaml
@@ -251,6 +251,30 @@ paths:
         500:
           description: "Internal server error"
 
+  /api/v1/admin/user-delete/{uuid}:
+    delete:
+      tags:
+        - Admin
+      summary: "Delete a User account"
+      operationId: "admin-user-delete"
+      parameters:
+        - name: uuid
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        200:
+          description: "Ok"
+        401:
+          description: "Unauthorized"
+        404:
+          description: "Page not found"
+        422:
+          description: "Unprocessable Entity"
+        500:
+          description: "Internal server error"
+
 components:
   securitySchemes:
     bearerAuth:
@@ -282,8 +306,10 @@ components:
             properties:
               email:
                 type: string
+                default: admin@buckhill.co.uk
               password:
                 type: string
+                default: password
             required:
               - email
               - password
